[package]
name = "fmt-derive-proc"
version = "0.0.1"
description = "A more robust and versatile derive macro for Debug and Display."
readme = "README.md"
authors = ["Daniel Schemmel <daniel@schemmel.net>"]
edition = "2021"
repository = "https://github.com/danielschemmel/fmt-derive"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
proc-macro-crate = "1"
proc-macro-error = "1"
quote = "1"
syn = "1"

[dev-dependencies]
pretty_assertions = "1"
