[package]
name = "fmt-derive-proc"
version = "0.1.2"
description = "A more robust and versatile derive macro for Debug and Display."
readme = "README.md"
authors = ["Daniel Schemmel <daniel@schemmel.net>"]
repository = "https://github.com/danielschemmel/fmt-derive"
license = "MIT OR Apache-2.0"

edition = "2024"
rust-version = "1.85.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
proc-macro-crate = "3"
proc-macro-error2 = "2"
quote = "1"
syn = "2"

[dev-dependencies]
pretty_assertions = "1"
