[package]
name = "fmt-derive"
version = "0.0.6"
description = "A more robust and versatile derive macro for Debug and Display."
readme = "README.md"
authors = ["Daniel Schemmel <daniel@schemmel.net>"]
repository = "https://github.com/danielschemmel/fmt-derive"
license = "MIT OR Apache-2.0"

edition = "2021"
rust-version = "1.64.0"

[dependencies]
fmt-derive-proc = { version = "=0.0.6", path = "../fmt-derive-proc" }

[dev-dependencies]
pretty_assertions = "1.3.0"
