[package]
name = "fmt-derive"
version = "0.1.2"
description = "A more robust and versatile derive macro for Debug and Display."
readme = "README.md"
authors = ["Daniel Schemmel <daniel@schemmel.net>"]
repository = "https://github.com/danielschemmel/fmt-derive"
license = "MIT OR Apache-2.0"

edition = "2024"
rust-version = "1.85.0"

[dependencies]
fmt-derive-proc = { version = "=0.1.2", path = "../fmt-derive-proc" }

[dev-dependencies]
pretty_assertions = "1.3.0"
